Text selection on mobile devices prevented

--- a/www/main.css
+++ b/www/main.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   -ms-touch-action: none;
   touch-action: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .template {
